manifests/poi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  selector:
    app: poi
  ports:
  - port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      name: poi
      labels:
        app: poi 
    spec:
      containers:
      - name: poi
        image: registrytwg4763.azurecr.io/poi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # the application listens to this port
