manifests/trips-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
spec:
  selector:
    app: trips
  ports:
  - port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      name: trips
      labels:
        app: trips 
    spec:
      containers:
      - name: trips
        image: registrytwg4763.azurecr.io/trips:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # the application listens to this port
