manifests/tripviewer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
  labels:
    app: tripviewer
spec:
  selector:
    app: tripviewer
  ports:
  - port: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      name: tripviewer
      labels:
        app: tripviewer 
    spec:
      containers:
      - name: tripviewer
        image: registrytwg4763.azurecr.io/tripviewer:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # the application listens to this port
