manifests/user-java-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java
spec:
  selector:
    app: user-java
  ports:
  - port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
spec:
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      name: user-java
      labels:
        app: user-java 
    spec:
      containers:
      - name: user-java
        image: registrytwg4763.azurecr.io/user-java:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # the application listens to this port
