manifests/userprofile-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  selector:
    app: userprofile
  ports:
  - port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: web
spec:
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      name: userprofile
      labels:
        app: userprofile 
    spec:
      containers:
      - name: userprofile
        image: registrytwg4763.azurecr.io/userprofile:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # the application listens to this port
